[Nathan] Fix Spacing at the top of the styleguide

--- a/app/scss/modern/_styleguide-docs.scss
+++ b/app/scss/modern/_styleguide-docs.scss
@@ -136,7 +136,7 @@ code {
   @include media($desktop) {
     @include span-columns(2);
     top: $styleguide-gutter;
-    display: block;
+    display: inline-block;
   }
 }
 
